1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (EXTRALDFLAGS): Add USE_EXTRALDFLAGS as 
	so that Makefile.appl doesn't have to be modified to get no-console
	Window apps.

1998-09-30  Alex Lancaster  <alex@santafe.edu>

	* Makefile.appl.in (swarm_{prefix,exec_prefix,libdir}): Extract
	also to allow SWARMLDFLAGS to be set properly.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in (swarm_SWARMLDFLAGS): Substitute using SWARMLDFLAGS.
	(SWARM_LDFLAGS): Use swarm_SWARMLDFLAGS instead of
	-L${swarm_libdir} @RPATH@${swarm_libdir}.

	* Makefile.appl.in (SWARMLDFLAGS): Substitute.
	(LDFLAGS): Use SWARMLDFLAGS instead of -L$(libdir) and
	@RPATH@$(libdir).

1998-08-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in: Remove X_EXTRA_LIBS.  Surround variables
	with {} throughout.
	(swarm_SYSLIBS):  Likewise.

	* Makefile.lib.in (bindir): Add (for libraries with demo apps
	that want to use libtool).

	* Makefile.appl.in (LINK): Remove.  Use libtool-swarm
	directly in $(APPEXE) rule.
	(SYSLIBS): Include substituted OBJCLIBS and DLLIB.

	* Makefile.lib.in (INCLUDES): Add -I.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (install-data-local): Use INSTALL_DATA instead.
	Do each file separately for install-sh case.

1998-08-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (LDFLAGS): Substitute at the end, but leave
	commented.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (APPEXE): Move up with other substitutions.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.lib.in, Makefile.appl.in: Substitute CPPFLAGS and
	add to compilation rule.
	(all): Depend on symlink.
	(symlink): Create link to current directory of LIBNAME.

	* Makefile.appl.in (datadir): Substitute.
	(swarmdatadir, swarmsysconfdir): Appends /swarm.
	(install-config): Use swarmsysconfdir instead.
	(install-data): New rule.